Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10957

Indeterminate QProgressBar doesn't animate when disabled using Vista style

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.0
    • 4.6.2, 4.7.0
    • GUI: Look'n'Feel
    • None
    • Microsoft Windows 7 Ultimate 32-bit
      Qt SDK 2010.02.1 (4.6.2)
      Qt 4.7.0 Beta 1
    • 05e46b93ccb2334ec3722cf1205058f778d11458

    Description

      When a QProgressBar is in indeterminate mode and is disabled by an ancestor (e.g. a progress bar in a status bar that is disabled by disabling its QMainWindow) or disabled directly, the indeterminate animation doesn't show. On other styles it animates as expected. This bug only occurs on the Windows Vista style.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bachewii Jens
            net147 Jonathan Liu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes