Fix QProgressBar not being animated when disabled using Vista style.

For the QWindowsVistaStyle, the QProgressBar is not animated when
it is disabled. QProgressBar is animated for other styles when it is
disabled. This fixes the inconsistency by allowing QProgressBar
animations when using QWindowsVistaStyle even if it is disabled.

Task-number: QTBUG-10957
Reviewed-by: pending